[package]

name = "llvmint"
version = "0.0.2"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/llvmint"
repository = "https://github.com/huonw/llvmint"
documentation = "http://huonw.github.io/llvmint/llvmint/"
license = "MIT/Apache-2.0"
keywords = ["numerics", "simd", "llvm", "intrinsics"]
readme = "README.md"
description = """
Bindings to (almost) all LLVM intrinsics, for all platforms.
"""


[dependencies]
simdty = { git = "https://github.com/GuillaumeGomez/simdty", rev = "ecfa075d744240e933b6d054ae1b4609aa32b9b9", version = "0.0.7" }

[features]
unstable = []
